--- a/style.css
+++ b/style.css
@@ -121,6 +121,12 @@ body {
     max-width: 800px;
     margin-left: auto;
     margin-right: auto;
+
+    /* Education Section */
+.education p {
+    max-width: 800px;
+    margin: 20px auto;
+    text-align: left;
 }
 
 @keyframes fadeIn {
