--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ body {
 .education p {
     max-width: 800px;
     margin: 20px auto;
-    text-align: left;
+    text-align: center;
 }
 
 .education strong {
